# pdr-tests

./: .gitignore  README.md  environment.yml  environment_nopdr.yml  pyproject.toml  setup.py
notebooks/: Coverage_Manifest_Construction.ipynb  compare_mismatches.ipynb  cover_everything_example.py  mismatch_comparison.py  parquet_index_assembly.ipynb
pdr_tests/: Coverage_Manifest_Construction.ipynb  Coverage_Manifest_Explorer.ipynb  Untitled.ipynb  __init__.py  compare_mismatches.ipynb  comparison_hook.py  cov_explore_rewrite.ipynb  datasets.py  ix.py  ix_interface.py  ix_scratch_copy.py  mismatch_comparison.py  mission_scrape.py  parquet_index_assembly.ipynb  regen_hashes.py  select_and_scrape_LROC.py  settings.py  test_everything_gratuitously.py  url_to_index.py
pdr_tests/definitions/: __init__.py  datasets.py
pdr_tests/definitions/apollo/: A12_SWS_1h_test.csv  A12_SWS_test.csv  A14_15_CCIG_index_test.csv  A14_15_CCIG_plot_test.csv  A15_16_SMSS_test.csv  A15_16_XRFS_test.csv  A15_SWS_1h_test.csv  A15_SWS_28s_test.csv  A15_XRFS_test.csv  A17_TG_test.csv  BUG_test.csv  metric_camera_test.csv  sample_photos_test.csv  selection_rules.py
pdr_tests/definitions/ch1/: M3_L0.csv  (+6 more)
pdr_tests/msl_chmn/: selection_rules.py
pdr_tests/selection_rules/: crism.py  lroc.py  rss.py  sharad.py
pdr_tests/settings/: __init__.py  _patcher.py  base.py  default.py  user.py
pdr_tests/utilz/: checkers.py  cli_utilz.py  coverage_utilz.py  dev_utilz.py  headerscan.py  ix_utilz.py  mem_utilz.py  new_coverage_utilz.py  test_utilz.py  unit_utilz.py
unit_tests/: test_read_image.py
(+3186 files in other folders)
